# molgpt

./: gen_moses_v1.csv  gen_moses_v2.csv  generate_moses_prop_scaf_adarsh.sh  moses_scaf_logp_adarsh.csv  moses_scaf_qed_adarsh.csv  moses_scaf_sas_adarsh.csv  moses_scaf_tpsa_adarsh.csv  pyproject.toml  test_psmiles_tokenizer.py  train_scaffold_props.sh  transPolymer_tokenizer.py
generate/: generate.py
scripts/: make_scaffold_props.py
train/: dataset.py  train.py  trainer.py  utils.py
wandb/: latest-run
wandb/run-20260130_110213-es168i3c/: run-es168i3c.wandb
wandb/run-20260130_110448-6fpug4c3/: run-6fpug4c3.wandb
wandb/run-20260130_110612-ytbbhtu8/: run-ytbbhtu8.wandb
wandb/run-20260130_110845-roogtk4d/: run-roogtk4d.wandb
wandb/run-20260130_110935-ga9v6fmn/: run-ga9v6fmn.wandb
wandb/run-20260130_111224-6yw5nq20/: run-6yw5nq20.wandb
wandb/run-20260130_111334-nn3lzexk/: run-nn3lzexk.wandb
wandb/run-20260130_111357-wg8z41vg/: run-wg8z41vg.wandb
wandb/run-20260130_124008-6wdrhgxn/: run-6wdrhgxn.wandb
wandb/run-20260130_124039-kvma9x3o/: run-kvma9x3o.wandb
wandb/run-20260130_130246-i3a8a8a2/: run-i3a8a8a2.wandb
wandb/run-20260130_130641-tv0w8xf4/: run-tv0w8xf4.wandb
wandb/run-20260130_130724-pixlwa1y/: run-pixlwa1y.wandb
wandb/run-20260202_184319-esydm6dk/: run-esydm6dk.wandb
wandb/run-20260202_184513-88jypqgs/: run-88jypqgs.wandb
wandb/run-20260202_184654-9h5j1mhw/: run-9h5j1mhw.wandb
wandb/run-20260202_184927-4n4q51pz/: run-4n4q51pz.wandb
wandb/run-20260203_130507-75n8dkdv/: run-75n8dkdv.wandb
(+84 files in other folders)
