[project]
name = "molgpt"
version = "0.1.0"
requires-python = ">=3.9,<3.12"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "torch>=2.0",
  "tqdm>=4.65",
  "wandb>=0.16",
  "rdkit-pypi>=2022.9.5",
  "moses>=0.10.0",
  "guacamol>=0.5.4",
  "fcd-torch>=1.0.7",
  "seaborn>=0.13",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
# Utilities that rely on RDKit contrib SA_Score or other extras
sa-score = []

[tool.uv]
package = false
